26.3 update and a lot of new stuff
- Updated to 26.3, new loader/fapi/loom/jackson, swapped ARRP for Packwright
- Added .gitattributes so line endings stop being a mess (this is why the diff is huge)
- New modules: projectiles, portals, patterns, world events, palettes, block templates, biome modifications
- Lots of new block types: containers/crates, bushes, crops, candles, climbables, rods, rotation blocks, redstone stuff
- Pulled seat/lock/container/redstone logic out into their own classes
- More Nexo stuff: custom blocks, stateful furniture, click actions, trident
- Killed the old quilt keybind code, the bedrock event classes, worldgen api and the per-tool item impls
- Rewrote the README and most of the docs, added a bunch of new format pages
- Cleaned up the tutorial pack folder names and added new examples